fix overflow and footer centering for tablet

--- a/wp-content/themes/ecoventura-2017/sass/sass/5.content-area/_5.homepage.scss
+++ b/wp-content/themes/ecoventura-2017/sass/sass/5.content-area/_5.homepage.scss
@@ -151,6 +151,12 @@
 				}
 
 				p {
+					@media screen and (min-width: 860px) {
+						max-height: 108px;
+					    overflow: hidden;
+						text-overflow: ellipsis;
+					}
+
 				    margin: 0 0 15px;
 				}
 
