--- a/wp-content/themes/ecoventura-2017/sass/sass/7.site-footer-widgets/_2.site-footer.scss
+++ b/wp-content/themes/ecoventura-2017/sass/sass/7.site-footer-widgets/_2.site-footer.scss
@@ -84,7 +84,7 @@
 	text-align: left;
 }
 
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 1023px) {
 	div.footer-widget-area section {
 	    text-align: center;
 	}
